<?xml version="1.0" encoding="UTF-8"?>
<!--
Copyright (C) 2021 – University of Mons, University Antwerpen

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!--
    ================================= PROJECT INFO ==============================
    -->
    <groupId>be.ac.umons.learningjson</groupId>
    <artifactId>benchmarks</artifactId>
    <version>1.1</version>

    <name>JSON schema learning benchmarks</name>
    <description>Benchmarks for learning algorithms for JSON Schemas.</description>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>DocSkellington</id>
            <name>Gaëtan Staquet</name>
            <email>gaetan.staquet@umons.ac.be</email>
            <organization>F.R.S.-FNRS, University of Mons, and University of Antwerp, PhD Student</organization>
            <organizationUrl>https://web.umons.ac.be/en/ and https://www.uantwerpen.be/en/</organizationUrl>
            <roles>
                <role>Developer</role>
                <role>Maintainer</role>
            </roles>
        </developer>
    </developers>

    <!--
    ===============================	SCM =======================
    -->
    <scm>
        <connection>scm:git:git@github.com:DocSkellington/LearningJSONSchema.git</connection>
        <developerConnection>scm:git:git@github.com:DocSkellington/LearningJSONSchema.git</developerConnection>
        <url>https://github.com/DocSkellington/LearningJSONSchema/tree/main</url>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <url>https://github.com/DocSkellington/LearningJSONSchema/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <!--
    ================================= PROPERTIES ================================
    -->
    <properties>
        <!-- Global configuration -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.sourceEncoding>UTF-8</project.reporting.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <!-- Custom properties -->
        <javadoc-plugin.conf.release>8</javadoc-plugin.conf.release>

        <!-- Dependency versions -->
        <learningoracles.version>1.0</learningoracles.version>
        <jsonschema.version>1.0</jsonschema.version>
        <automatalib.version>0.11.0-SNAPSHOT</automatalib.version>
        <learnlib.version>0.17.0-SNAPSHOT</learnlib.version>
        <testng.version>7.4.0</testng.version>
        <csv.version>1.9.0</csv.version>
        <checkstyle-plugin.version>3.0.0</checkstyle-plugin.version>
        <puppycrawl-plugin.version>8.10</puppycrawl-plugin.version>
        <checkstyle-rules-plugin.version>1.1.0</checkstyle-rules-plugin.version>
        <jacoco-plugin.version>0.8.1</jacoco-plugin.version>
        <javadoc-plugin.version>3.2.0</javadoc-plugin.version>
        <source-plugin.version>3.2.1</source-plugin.version>
        <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
        <assembly-plugin.version>3.3.0</assembly-plugin.version>

        <!-- Javadoc links -->
        <java.apidocs>http://docs.oracle.com/javase/8/docs/api/</java.apidocs>
        <automatalib.apidocs>http://learnlib.github.io/automatalib/maven-site/${automatalib.version}/apidocs/</automatalib.apidocs>
        <learnlib.apidocs>http://learnlib.github.io/learnlib/maven-site/${learnlib.version}/apidocs/</learnlib.apidocs>
    </properties>

    <!--
    ================================= DEPENDENCIES ==============================
    -->
    <dependencies>
        <!-- Internal dependencies -->
        <dependency>
            <groupId>be.ac.umons.learningjson</groupId>
            <artifactId>oracles</artifactId>
            <version>${learningoracles.version}</version>
        </dependency>
        <dependency>
            <groupId>be.ac.umons.jsonschematools</groupId>
            <artifactId>jsonschematools-tools</artifactId>
            <version>${jsonschema.version}</version>
        </dependency>
        <dependency>
            <groupId>be.ac.umons.jsonschematools</groupId>
            <artifactId>jsonschematools-generator</artifactId>
            <version>${jsonschema.version}</version>
        </dependency>
        <dependency>
            <groupId>be.ac.umons.jsonschematools</groupId>
            <artifactId>jsonschematools-validator</artifactId>
            <version>${jsonschema.version}</version>
        </dependency>

        <!-- AutomataLib and LearnLib -->
        <dependency>
            <groupId>net.automatalib.distribution</groupId>
            <artifactId>automata-distribution</artifactId>
            <version>${automatalib.version}</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>de.learnlib.distribution</groupId>
            <artifactId>learnlib-distribution</artifactId>
            <version>${learnlib.version}</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>de.learnlib</groupId>
            <artifactId>learnlib-lstar-roca</artifactId>
            <version>${learnlib.version}</version>
        </dependency>
        <dependency>
            <groupId>de.learnlib</groupId>
            <artifactId>learnlib-lstar-vca</artifactId>
            <version>${learnlib.version}</version>
        </dependency>

        <!-- CSV -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>${csv.version}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.10</version>
        </dependency>

        <!-- TestNG -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!--
    ================================= BUILD PLUGINS =============================
    -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle-plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${puppycrawl-plugin.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>com.github.ngeor</groupId>
                        <artifactId>checkstyle-rules</artifactId>
                        <version>${checkstyle-rules-plugin.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <configLocation>com/github/ngeor/checkstyle.xml</configLocation>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${source-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${assembly-plugin.version}</version>
                <executions>
                    <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>single</goal>
                    </goals>
                    <configuration>
                        <archive>
                            <manifest>
                                <addClasspath>true</addClasspath>
                                <mainClass>be.ac.umons.vpdajson.Benchmarks</mainClass>
                            </manifest>
                        </archive>
                        <descriptorRefs>
                            <descriptorRef>jar-with-dependencies</descriptorRef>
                        </descriptorRefs>
                    </configuration>
                </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${javadoc-plugin.version}</version>
                <configuration>
                    <quiet>true</quiet>
                    <source>${maven.compiler.source}</source>
                    <detectLinks>true</detectLinks>
                    <linksource>false</linksource>
                    <links>
                        <link>${java.apidocs}</link>
                        <link>${automatalib.apidocs}</link>
                        <link>${learnlib.apidocs}</link>
                    </links>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-plugin.version}</version>
            </plugin>
        </plugins>
    </build>
</project>
